# sql-analytics-library

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/sql_analytics/: __init__.py  cli.py
src/sql_analytics/config/: settings.py
src/sql_analytics/models/: schema.py
src/sql_analytics/queries/: __init__.py
src/sql_analytics/services/: dashboard_generator.py  db_manager.py  repl_shell.py
src/sql_analytics/utils/: data_generator.py
tests/: conftest.py  test_cli.py
tests/config/: test_settings.py
tests/models/: test_schema.py
tests/services/: test_dashboard_generator.py  test_db_manager.py  test_repl_shell.py
tests/utils/: test_data_generator.py
