[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-analytics-library"
version = "0.1.0"
description = "A Python library containing 20 complex analytical SQL queries against an e-commerce database."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "tabulate>=0.8.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.scripts]
sql-analytics = "sql_analytics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
